script goes into not responding #33281

Closed
opened 2012-11-23 23:34:59 +01:00 by Ricky J · 4 comments

%%%i tried this script and if i select the cube it runs fine!

but if i select the other object called gougon
it goes into not responding

note: i added a vertical line to the gougon object to be able to use the screw modifier!

so this looks like a bug !

thanks
happy blendering

%%%

%%%i tried this script and if i select the cube it runs fine! but if i select the other object called gougon it goes into not responding note: i added a vertical line to the gougon object to be able to use the screw modifier! so this looks like a bug ! thanks happy blendering %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Whats happening is scanfill is getting many verts in the same location, then hanging when attempting to remove-doubles, checking further.%%%

%%%Whats happening is scanfill is getting many verts in the same location, then hanging when attempting to remove-doubles, checking further.%%%

%%%scanfill assumed ordered edges which meshes don't have, workaround by skipping remove-doubles pass on meshes.

We could order mesh edges but this could get slow, doubles are a degenerate case anyway so we can skip this for mesh ngons.
closing. 52588.%%%

%%%scanfill assumed ordered edges which meshes don't have, workaround by skipping remove-doubles pass on meshes. We could order mesh edges but this could get slow, doubles are a degenerate case anyway so we can skip this for mesh ngons. closing. 52588.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#33281
No description provided.